# weather-prediction-api

./: .dockerignore  .gitignore  API_USAGE.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  github.txt  pyproject.toml  render.yaml  requirements.txt  restart_server.bat  test_render_deployment.py
.claude/: settings.local.json
.github/workflows/: ci-cd.yml  test.yml
app/: main.py
deployment/: deploy.sh
