[tool.poetry]
name = "weather-prediction-api"
version = "1.0.0"
description = "Weather prediction API for Sydney using machine learning"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
numpy = "^2.3.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
lightgbm = "^4.6.0"
requests = "^2.32.5"
joblib = "^1.3.2"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88